ping-pong/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
    namespace: log-and-ping
    name: ping-pong-dep
spec:
    replicas: 1
    selector:
        matchLabels:
            app: ping-pong
    template:
        metadata:
            labels:
                app: ping-pong
        spec:
            containers:
                - name: ping-pong
                  image: nikogenix/ping-pong:v11
                  resources:
                      limits:
                          memory: 512Mi
                          cpu: "1"
